--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "fastapi>=0.121.2",
+    "psycopg>=3.2.12",
+    "qdrant-client>=1.15.1",
+    "pydantic-settings>=2.0.0",
+    "uvicorn[standard]>=0.27.0",
+]
+
