--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,8 @@ dependencies = [
     "qdrant-client>=1.15.1",
     "pydantic-settings>=2.0.0",
     "uvicorn[standard]>=0.27.0",
+    "transformers>=4.40.0",
+    "torch>=2.3.0",
+    "pillow>=10.3.0",
+    "numpy>=1.24.0",
 ]
-
