--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "litserve>=0.2.16",
+    "pillow>=12.0.0",
+    "torch>=2.9.1",
+    "transformers>=4.57.3",
+]
