--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "litserve>=0.2.16",
-    "pert>=2019.11",
+    "peft>=0.18.1",
     "pillow>=12.0.0",
     "torch>=2.9.1",
     "transformers>=4.57.3",
