--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -32,6 +32,8 @@ RUN uv sync --frozen --no-dev
 # Copy application
 COPY main.py .
 COPY images ./images
+COPY preprocess.py .
+COPY thai_dict.json .
 
 # Copy LoRA adapter
 COPY lora_adapter ./lora_adapter
